--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -78,7 +78,7 @@
         </FrameLayout>
 
         <include
-            android:id="@+id/shadow"
+            android:id="@+id/shadow0"
             android:layout_below="@+id/user_info"
             layout="@layout/shadow"
             android:layout_width="match_parent"
@@ -86,14 +86,21 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab"
-            android:layout_below="@id/shadow"
+            android:layout_below="@id/shadow0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabSelectedTextColor="@color/colorPrimary"
             app:tabTextColor="@color/text_color_gray"/>
 
-        <android.support.v4.view.ViewPager
+        <include
+            android:id="@+id/shadow1"
             android:layout_below="@+id/tab"
+            layout="@layout/shadow"
+            android:layout_width="match_parent"
+            android:layout_height="2px" />
+
+        <android.support.v4.view.ViewPager
+            android:layout_below="@+id/shadow1"
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
