--- a/app/src/main/res/layout/activity_animation_detail.xml
+++ b/app/src/main/res/layout/activity_animation_detail.xml
@@ -132,9 +132,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/margin_triple"
-        android:src="@drawable/ic_like_heart"
+        android:src="@drawable/heart_btn_selector"
         android:scaleType="center"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@android:color/white"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
