--- a/app/src/main/res/layout/video.xml
+++ b/app/src/main/res/layout/video.xml
@@ -115,6 +115,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:hint="请在这里输入弹幕biu~"
+                    android:imeOptions="flagNoExtractUi"
                     android:textColorHint="@color/text_color_dark_gray"
                     android:textColor="@color/text_color_dark_gray"/>
             </RelativeLayout>
